--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.481.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "nookies": "^2.5.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.1.0",
@@ -26,6 +29,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
