--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-  "name": "my-todo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.49.1",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "dayjs": "^1.11.13",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.481.0",
-    "next": "15.2.2",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.0",
-    "nookies": "^2.5.2",
-    "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-calendar": "^5.1.0",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.5.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4.0.14",
-    "typescript": "^5"
-  }
+	"name": "my-todo-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@supabase/supabase-js": "^2.49.1",
+		"@tailwindcss/vite": "^4.0.14",
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
+		"dayjs": "^1.11.13",
+		"js-cookie": "^3.0.5",
+		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.481.0",
+		"next": "15.2.2",
+		"next-auth": "^4.24.11",
+		"next-themes": "^0.4.6",
+		"nodemailer": "^6.10.0",
+		"nookies": "^2.5.2",
+		"react": "^18.3.1",
+		"react-beautiful-dnd": "^13.1.1",
+		"react-calendar": "^5.1.0",
+		"react-dom": "^18.3.1",
+		"react-hot-toast": "^2.5.2",
+		"react-icons": "^5.5.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4.0.0",
+		"@types/js-cookie": "^3.0.6",
+		"@types/jsonwebtoken": "^9.0.9",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.2.2",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5"
+	}
 }
