--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.49.1",
 		"@tailwindcss/vite": "^4.0.14",
+		"@types/nodemailer": "^6.4.17",
+		"axios": "^1.8.3",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^3.0.2",
 		"dayjs": "^1.11.13",
+		"framer-motion": "^12.5.0",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.481.0",
