--- a/package.json
+++ b/package.json
@@ -9,28 +9,36 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
 		"@supabase/supabase-js": "^2.49.1",
 		"@tailwindcss/vite": "^4.0.14",
 		"@types/nodemailer": "^6.4.17",
+		"@types/react-dnd": "^2.0.36",
+		"ag-grid-community": "^33.1.1",
+		"ag-grid-react": "^33.1.1",
+		"ajv": "^8.17.1",
 		"axios": "^1.8.3",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^3.0.2",
-		"dayjs": "^1.11.13",
 		"framer-motion": "^12.5.0",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.481.0",
+		"moment-timezone": "^0.5.47",
 		"next": "15.2.2",
 		"next-auth": "^4.24.11",
 		"next-themes": "^0.4.6",
 		"nodemailer": "^6.10.0",
 		"nookies": "^2.5.2",
 		"react": "^18.3.1",
-		"react-beautiful-dnd": "^13.1.1",
 		"react-calendar": "^5.1.0",
+		"react-d3-tree": "^3.6.6",
+		"react-dnd": "^16.0.1",
+		"react-dnd-html5-backend": "^16.0.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.5.2",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"react-multi-date-picker": "^4.5.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
