--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ag-grid-community/client-side-row-model": "^32.3.4",
+		"@ag-grid-community/core": "^32.3.4",
+		"@ag-grid-community/react": "^32.3.4",
+		"@ag-grid-community/styles": "^32.3.4",
 		"@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
 		"@supabase/supabase-js": "^2.49.1",
 		"@tailwindcss/vite": "^4.0.14",
